# Neuro-Library

./: README.md
.specify/memory/: constitution.md
backend/: .env  .gitignore  agent.py  main.py  pyproject.toml  requirements.txt  update-embedding.py
backend/templates/: chat.html
frontend/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
frontend/docs/: intro.md
frontend/docs/capstone/: index.md
frontend/docs/hardware-requirements/: index.md
frontend/docs/module-1-ros2/: chapter-1-introduction-to-ros2.md  chapter-2-nodes-and-topics.md  chapter-3-services-actions-parameters.md  chapter-4-urdf-robot-modeling.md  chapter-5-launch-files-package-management.md  index.md
frontend/docs/module-2-digital-twin/: chapter-1-introduction-gazebo-unity.md  chapter-2-physics-simulation.md  chapter-3-sensor-simulation.md  chapter-4-high-fidelity-rendering.md  index.md
frontend/docs/module-3-nvidia-isaac/: chapter-1-isaac-sim-overview.md  chapter-2-hardware-accelerated-vslam.md  chapter-3-navigation-path-planning.md  chapter-4-ai-powered-perception.md  chapter-5-reinforcement-learning.md  index.md
frontend/docs/module-4-vla-humanoids/: chapter-1-humanoid-robot-development.md  chapter-2-manipulation-grasping.md  chapter-3-human-robot-interaction.md  chapter-4-conversational-robotics.md  chapter-5-capstone-autonomous-humanoid.md  index.md
frontend/src/components/: MarkdownRenderer.jsx
frontend/src/css/: button-styles.css  (+9 more)
specs/1-neuro-library-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+17 files in other folders)
