[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.0",
    "decouple>=0.0.7",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "openai-agents>=0.6.3",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
